# tauri-plugin-geolocation

./: .gitignore  Cargo.toml  README.md  build.rs  package.json
.changes/: config.json  initial-release.md  readme.md
android/: build.gradle.kts  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Example.kt  ExamplePlugin.kt  GeolocationPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: migrated.json
examples/tauri-app/src-tauri/src/: lib.rs
ios/: Package.swift  README.md
ios/Sources/: GeolocationPlugin.swift
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: checkPermissions.toml  check_permissions.toml  getLocation.toml  get_location.toml  requestPermissions.toml  request_permissions.toml  startLocationUpdates.toml  stopLocationUpdates.toml
permissions/schemas/: schema.json
src/: desktop.rs  lib.rs  mobile.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
